internal/xds/translator/testdata/out/xds-ir/http-route-with-tls-system-truststore.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-btls/http
  virtualHosts:
  - domains:
    - '*'
    name: envoy-gateway/gateway-btls/http/*
    routes:
    - match:
        path: /exact
      name: httproute/envoy-gateway/httproute-btls/rule/0/match/0/*
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: httproute/envoy-gateway/httproute-btls/rule/0/backend/0
            weight: 1
